# sphinx-icalendar-extension

./: .gitignore  .readthedocs.yaml  Makefile  README.rst  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: changelog.rst  conf.py  index.rst  install.rst  usage.rst
sphinx_icalendar/: __init__.py  _lexer.py  _nodes.py  _setup.py  _transform.py  _visitors.py
