[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "sphinx-icalendar"
dynamic = ["version"]
description = "Sphinx extension that renders code-block:: calendar as an HTML calendar"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "sphinx>=5.0",
    "icalendar>=5.0",
]

[project.optional-dependencies]
dev = ["pytest", "sphinx", "sphinx-autobuild"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "sphinx_icalendar/_version.py"
