[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "sphinx-icalendar"
dynamic = ["version"]
description = "Sphinx extension that renders code-block:: calendar as an HTML calendar"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "sphinx>=5.0",
    "icalendar>=7.0",
    "recurring-ical-events>=3.8.1",
    "sphinx-design>=0.5",
]

[project.optional-dependencies]
dev = ["pytest", "sphinx", "sphinx-autobuild"]

[project.entry-points."pygments.lexers"]
ics = "sphinx_icalendar._lexer:ICalendarLexer"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "sphinx_icalendar/_version.py"
